--- a/index.css
+++ b/index.css
@@ -1,6 +1,35 @@
-#header{
-    border: 3px solid black;
-    display: inline;
-
-
+*{
+    margin: 0;
+    padding:0;
 }
+.header{
+    display: flex;
+    flex-direction: row;
+    background-color: olive;
+}
+.top-bar{
+    display: inline-block;
+    list-style: none;
+}
+nav{
+    height: 50px;
+    background: indianred;
+}
+nav > ul{
+    float: right;
+    margin-right: 25px;
+    list-style: none;
+}
+nav> ul > li {
+    display: inline-block;
+    line-height: 50px;
+    margin:0 15px;
+    }
+ nav > ul > li > a {
+     position: relative;
+     padding: 5px 0;
+     color: lightblue;
+     font-size:  18px;
+     text-decoration: none;
+
+ }
