--- a/index.css
+++ b/index.css
@@ -5,22 +5,24 @@
 .header{
     display: flex;
     flex-direction: row;
-    background-color: olive;
+    justify-content: space-between;
+    background-color: rosybrown;
+}
+.header >h1 {
+    text-align: center;
+
 }
 .home > p {
-        position: absolute;
-width: 293px;
-height: 59px;
-font-family: Roboto;
-font-style: normal;
-font-weight: normal;
-font-size: 12px;
-line-height: 14px;
+
+        position: relative;
+        color: blue;
+        font-weight: bold;     
+
 }
 
 nav{
     height: 50px;
-    background: rgb(92, 192, 205);
+    background: grey;
 }
 nav > ul{
     float: right;
@@ -59,6 +61,7 @@ h1{
 
 }
 .images{
+    background-color: cornflowerblue;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -66,16 +69,24 @@ h1{
   main{
       box-sizing: border-box;
     background-color: lightslategray;
-    height:600px;
+    height:500px;
     /*display:flex;
     justify-content: space-between;
     flex-direction: column;
     */
   }
-  /*
+  .column {
+    float: left;
+    width: 28%;
+    padding: 5px;
+    height: 200px; 
+  }
+
 #animals{
-    text-align: start;
-    */
+  content: "";
+  display: table;
+  clear: both;
+}
 #footer{
     display: flex;
     justify-content: space-around;
